<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/img_back" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/baseline_arrow_back_ios_24_black"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/app_font_black"
                android:gravity="center"
                android:text="@string/title_setting"
                android:textColor="#1B1B1B"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lang_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lang_setting"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/setting_language_options"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <View
                android:background="#D6D6D6"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/rate_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_rate_setting"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/setting_rate_us"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <View
                android:background="#D6D6D6"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/privacy_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_policy_setting"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/setting_privacy_policy"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>

</layout>
