<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header_permission"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title_permission"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="start"
                android:lineSpacingExtra="28.6dp"
                android:paddingTop="8dp"
                android:text="@string/permission_title"
                android:textColor="#1E252B"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/per_go"
                android:textColor="#307033"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@id/fr_ads"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_permission">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/header_permission">

                <ImageView
                    android:id="@+id/image_permission"
                    android:layout_width="214dp"
                    android:layout_height="170.24dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginBottom="4dp"
                    android:src="@drawable/ic_permission" />

                <TextView
                    android:id="@+id/description_perssion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6.76dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/permission_content"
                    android:textColor="#4F4F4F"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/switch_bar_corner"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_storage"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/per_storage"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/bg_thumb"
                        app:track="@drawable/bg_track"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/switch_bar_corner"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_camera"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/per_camera"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumb="@drawable/bg_thumb"
                        app:track="@drawable/bg_track"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/fr_ads"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <include layout="@layout/ads_shimmer_native_language" />
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>