<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_arrow_back_ios_24_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/app_font_black"
                android:gravity="center"
                android:text="@string/detail_list_recents"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </FrameLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_banner_list"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/app_font_black"
                    android:text="@string/detail_list_today"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:scrollbars="vertical"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        app:spanCount="4"
                        tools:listitem="@layout/item_detail_photo" />
                </ScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/app_font_black"
                    android:text="@string/detail_list_yesterday"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_yesterday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:scrollbars="vertical"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        app:spanCount="4"
                        tools:listitem="@layout/item_detail_photo" />
                </ScrollView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/rl_banner_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#E3E2E2">

            <include
                android:id="@+id/banner"
                layout="@layout/layout_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:visibility="visible" />
        </RelativeLayout>
    </RelativeLayout>

</layout>
